fixed counter bug and enabled wrapping for long tag-lists

--- a/src/app/components/bibliography/bibliography.css
+++ b/src/app/components/bibliography/bibliography.css
@@ -1,17 +1,15 @@
-ul {
+ol {
     margin: 0;
     padding: 0;
-    counter-reset: references;
 }
 
-ul > li:not(:last-child) {
+ol > li:not(:last-child) {
     margin-block-end: 0.25em;
 }
 
 li {
     counter-increment: references;
-    display: list-item;
-    margin-inline-start: 1.5em;
+    margin-inline: 1.5em 0;
 }
 
 li::marker {
