--- a/src/app/components/tag-list/tag-list.css
+++ b/src/app/components/tag-list/tag-list.css
@@ -1,4 +1,5 @@
 :host {
     display: flex;
-    column-gap: 0.35rem;
+    flex-wrap: wrap;
+    gap: 0.35rem;
 }
